cats view responsive

--- a/ui_lovelace_minimalist/dashboard/views/01-home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/01-home.yaml
@@ -104,7 +104,7 @@ cards:
               variables:
                 optional: true
                 entity: sensor.cat_device_failure_count
-                navigation_path: "/the-matrix/cats?anchor=status"
+                navigation_path: "/the-matrix/cats"
             - type: custom:button-card
               template: chip_icon_state_if_value
               variables:
