--- a/ui_lovelace_minimalist/dashboard/views/mainviews/house.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/mainviews/house.yaml
@@ -5,7 +5,7 @@ layout:
   grid-template-areas: |
     "nav title status ."
     "sensors climate covers alerts"
-    "batteries schedules . ."
+    "batteries schedules tracking ."
   mediaquery:
     # portrait monitor
     "only screen and (min-width: 769px) and (max-width: 1400px)":
@@ -15,6 +15,7 @@ layout:
         "sensors climate"
         "alerts covers"
         "batteries schedules"
+        "tracking ."
     # Smartphones
     "only screen and (max-width: 768px)":
       grid-template-areas: |
@@ -27,6 +28,7 @@ layout:
         "alerts"
         "batteries"
         "schedules"
+        "tracking"
 cards:
   - type: custom:button-card
     template: chip_back
@@ -77,7 +79,6 @@ cards:
             optional: true
             entity: sensor.devices_with_low_battery
             navigation_path: "/the-matrix/house?anchor=low-battery"
-
 
   #################
   # SENSORS
@@ -292,3 +293,34 @@ cards:
 
       - type: shopping-list
         title: Shopping List
+
+  #################
+  # DEVICE TRACKING
+  #################
+  - type: vertical-stack
+    view_layout:
+      grid-area: tracking
+    cards:
+      - type: custom:button-card
+        template: card_title
+        label: Device Tracking
+
+      - type: map
+        aspect_ratio: 16:9
+        auto_fit: true
+        entities:
+          - device_tracker.house_keys
+          - device_tracker.spare_house_key
+          - device_tracker.spare_wires
+          - device_tracker.ginas_iphone_13_mini
+          - device_tracker.poat_s_iphone_14_pro_max
+          - device_tracker.poat_s_iphone_14_pro_max_2
+          - zone.home
+
+      - type: custom:auto-entities
+        card:
+          type: entities
+        filter:
+          include:
+            - attributes:
+                source_type: gps
