--- a/automations/devices/soundbar-on.yaml
+++ b/automations/devices/soundbar-on.yaml
@@ -8,7 +8,7 @@ id: 9b349dfa-9719-4c2e-aeb7-e35de9e4618a
 trigger:
   - platform: state
     entity_id:
-      - media_player.fire_tv_192_168_68_107
+      - media_player.living_room_fire_tv
     from: "off"
     to: idle
 
