--- a/ui_lovelace_minimalist/dashboard/views/rooms/office.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/office.yaml
@@ -35,7 +35,7 @@ cards:
       - fave_percent: 20
 
   - type: media-control
-    entity: media_player.fire_tv_192_168_68_115
+    entity: media_player.office_fire_tv
 
   - type: media-control
     entity: media_player.xbox_x
